PIofSF/force-app/main/default/objects/Trail_Module__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Trail Modules</relationshipLabel>
    <relationshipName>Trail_Modules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>