PIofSF/force-app/main/default/objects/Trail_Module__c/fields/Times_TrailModule__c.field-meta.xml
<CustomField>
    <fullName>Times_TrailModule__c</fullName>
    <label>Times TrailModule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>