PIofSF/force-app/main/default/objects/Trail_Module__c/listViews/li.listView-meta.xml
<ListView>
    <fullName>li</fullName>
    <columns>NAME</columns>
    <columns>Trail__c</columns>
    <columns>Module__c</columns>
    <columns>Points_TrailModule__c</columns>
    <columns>Times_TrailModule__c</columns>
    <filterScope>Mine</filterScope>
    <label>li</label>
</ListView>